fix: fix horizontal scroll on pets page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1491,7 +1491,7 @@ body {
     }
 
     @media screen and (min-width: 1280px) {
-      min-width: 1300px;
+      min-width: 1200px;
     }
   }
 }
